finish initial setup

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+@import "./components/Header/Header.css";
+@import "./components/Form/Form.css";
+@import "./components/Button/Button.css";
+@import "./components/EntriesContainer/EntriesContainer.css";
+@import "./components/Navigation/Navigation.css";
+@import "./components/Entry/Entry.css";
+@import "./components/Footer/Footer.css";
+
+:root {
+  --highlight-colour: #ff4a11;
+  --light-background-colour: #e4e8f0;
+  --dark-background-colour: #252629;
+  --white-colour: #ffffff;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  color: var(--dark-background-colour);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 2rem;
+  min-width: 300px;
+  max-width: 500px;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5rem;
+  margin-bottom: 0;
 }
