minor css changes

--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -1,5 +1,4 @@
 .entry {
-  position: relative;
   border-bottom: 1px solid var(--light-background-colour);
   display: flex;
   flex-direction: column;
@@ -13,12 +12,15 @@
 .entry__bookmark-icon {
   border: none;
   background-color: transparent;
-  position: absolute;
-  right: 0;
-  top: 4rem;
 }
 
 .entry__date {
   align-self: center;
   margin-bottom: -1rem;
+}
+
+.entry__heading-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
