--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,11 +1,16 @@
 .navigation {
-  padding-left: 0;
+  padding-left: 1rem;
   list-style: none;
   display: flex;
   gap: 1.5rem;
+  margin-bottom: -1rem;
+  align-self: flex-start;
 }
 
-.navigation a {
+.navigation button {
+  border: none;
+  background-color: transparent;
+  font-size: 1rem;
   text-decoration: none;
   font-weight: 600;
 }
